[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jqueue"
dynamic = ["version"]
description = "Storage-agnostic job queue using object storage with compare-and-set semantics"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "JB", email = "janbjorge@gmail.com" }]
keywords = ["queue", "job-queue", "object-storage", "s3", "gcs", "async", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/janbjorge/jqueue"
Repository = "https://github.com/janbjorge/jqueue"
Issues = "https://github.com/janbjorge/jqueue/issues"

[project.optional-dependencies]
s3 = ["aioboto3>=13.0"]
gcs = ["google-cloud-storage>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aioboto3>=13.0",
    "google-cloud-storage>=2.0",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["aioboto3", "aioboto3.*", "google.cloud.storage", "google.cloud.*", "google.api_core", "google.api_core.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jqueue._version"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "jqueue/_version.py"
